--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Adventure Game!</title>
-    <link rel = "stylesheet" href = "./style.css">
-    <script src = "./main.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="styles.css" rel="stylesheet">
+  <script defer src="game.js"></script>
+  <title>Text Adventure</title>
 </head>
 <body>
-    <div id = "content">
-        <h1>Welcome to our Adventure</h1>
-        <label for = "name-input">What is your name?</label>
-        <input id = "name-input" type = "text"></input>
-        <button id = "start-button">Start the game!</button>
+  <div class="container">
+    <div id="text">Text</div>
+    <div id="option-buttons" class="btn-grid">
+      <button class="btn">Option 1</button>
+      <button class="btn">Option 2</button>
+      <button class="btn">Option 3</button>
+      <button class="btn">Option 4</button>
     </div>
+  </div>
 </body>
+</html>
