--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="styles.css" rel="stylesheet">
-  <script defer src="game.js"></script>
+  <link href="style.css" rel="stylesheet">
+  <script defer src="main.js"></script>
   <title>Text Adventure</title>
 </head>
 <body>
