--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="style.css" rel="stylesheet">
-  <script defer src="mains.js"></script>
+  <script defer src="main.js"></script>
   <title>Text Adventure</title>
 </head>
 <body>
